cors disable hardcode